<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <item android:title="All BD Results">
        <menu>
            <item
                android:id="@+id/primary"
                android:icon="@mipmap/ic_favorite_black_24dp"
                android:title="@string/primary" />

            <item
                android:id="@+id/resultMarksheet"
                android:icon="@mipmap/ic_favorite_black_24dp"
                android:title="@string/secondary_mark" />

            <item
                android:id="@+id/nuresult"
                android:icon="@mipmap/ic_favorite_black_24dp"
                android:title="@string/nu" />

            <item
                android:id="@+id/moreResult"
                android:icon="@mipmap/ic_favorite_black_24dp"
                android:title="@string/moreResult" />
        </menu>
    </item>


    <item android:title="Recent Job">
        <menu>
            <item
                android:id="@+id/new_jobs"
                android:icon="@drawable/newjobsicon"
                android:title="@string/newJob" />
        </menu>
    </item>


    <item android:title="Recommended Category">
        <menu>

            <item
                android:id="@+id/govt_jobs"
                android:icon="@drawable/jobs"
                android:title="@string/govtJobs" />


            <item
                android:id="@+id/non_govt_jobs"
                android:icon="@drawable/jobs"
                android:title="@string/notGovtJobs" />
            <item
                android:id="@+id/it_jobs"
                android:icon="@drawable/jobs"
                android:title="@string/itJobs" />

            <item
                android:id="@+id/engineering_jobs"
                android:icon="@drawable/jobs"
                android:title="Engineering/Architech" />
            <item
                android:id="@+id/textile_jobs"
                android:icon="@drawable/jobs"
                android:title="@string/textJobs" />

            <item
                android:id="@+id/marketing_jobs"
                android:icon="@drawable/jobs"
                android:title="@string/marktingJObs" />


            <item
                android:id="@+id/bank_jobs"
                android:icon="@drawable/jobs"
                android:title="@string/bankJobs" />
            <item
                android:id="@+id/forreign_jobs"
                android:icon="@drawable/jobs"
                android:title="@string/locationWise" />

        </menu>
    </item>

    <item android:title="Job Notice">
        <menu>

            <item
                android:id="@+id/notice"
                android:icon="@mipmap/ic_note_add_black_24dp"
                android:title="@string/jobNotice" />
            <item
                android:id="@+id/bcs_notice"
                android:icon="@mipmap/ic_note_add_black_24dp"
                android:title="@string/bcsNotice" />
        </menu>
    </item>


    <item android:title="Islamic Site">
        <menu>
            <item
                android:id="@+id/reciteQuran"
                android:icon="@mipmap/ic_open_in_new_black_24dp"
                android:title="tanzil.net" />
            <item
                android:id="@+id/Quran"
                android:icon="@mipmap/ic_open_in_new_black_24dp"
                android:title="quran.com" />

        </menu>
    </item>

</menu>
