<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="motiur_bdjobs.bd.com.allbdjobs.test">


    <!--<item-->
        <!--android:id="@+id/action_share"-->
        <!--android:icon="@mipmap/ic_share_black_24dp"-->
        <!--android:title="@string/share"-->
        <!--android:orderInCategory="100"-->
        <!--app:showAsAction="ifRoom"-->
        <!--app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>-->

    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:icon="@drawable/home"
        android:title="@string/home"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_ratings"
        android:orderInCategory="200"
        android:icon="@mipmap/ic_star_rate_black_18dp"
        android:title="@string/action_ratings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_update"
        android:orderInCategory="300"
        android:title="@string/action_update"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_more"
        android:orderInCategory="400"
        android:icon="@mipmap/ic_note_add_black_24dp"
        android:title="@string/action_more"
        app:showAsAction="never"/>

</menu>
